# auto-cropper

./: .gitignore  LARGE_VIDEO_ENHANCEMENT_PLAN.md  LICENSE  README.md  create_sample.py  create_sample_video.py  demo.py  mypy.ini  pyproject.toml  requirements-dev.txt  requirements.txt  test_error_handling.py  verify_dependencies.py
.ai_context/: batch_processing_plan.md
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
auto_cropper/: __init__.py  cli.py  cropper.py  detector.py  exceptions.py  memory_monitor.py  person_cropper.py  person_detector.py  person_tracker.py  streaming_json_writer.py  video_cropper.py
tests/: test_batch_processing.py  test_chunked_detection.py  test_cli_error_handling.py  test_cropper.py  test_memory_monitor.py  test_person_detector.py  test_person_tracker.py  test_streaming_json_writer.py
