[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "auto-cropper"
version = "0.1.0"
description = "A command-line tool for automatic video cropping that follows a person"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "click==8.2.1",
    "opencv-python==4.11.0.86",
    "numpy==2.3.1",
    "ultralytics==8.3.161",
    "torch==2.7.1",
    "torchvision==0.22.1",
    "tqdm==4.67.1",
]

[project.scripts]
auto-cropper = "auto_cropper.cli:main"

[project.optional-dependencies]
dev = [
    "pytest==8.4.1",
    "black==25.1.0",
    "flake8==7.3.0",
]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
# Very relaxed type checking - almost no enforcement
ignore_missing_imports = true
allow_untyped_calls = true
allow_untyped_defs = true
allow_incomplete_defs = true
allow_untyped_globals = true
disallow_untyped_calls = false
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false
warn_return_any = false
warn_unused_ignores = false
warn_redundant_casts = false
warn_unused_configs = false
no_implicit_optional = false
strict_optional = false
# Additional relaxed settings
disable_error_code = ["assignment", "attr-defined", "operator", "union-attr", "var-annotated", "index"]
